apps/wiki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  namespace: prod
  labels:
    app: wiki

spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiki

  template:
    metadata:
      labels:
        app: wiki

    spec:
      containers:
        - name: wiki
          image: ghcr.io/requarks/wiki:2
          ports:
            - containerPort: 3000
              protocol: TCP
