apps/wiki/db-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: wiki-db-service
  namespace: prod

spec:
  selector:
    app: wiki-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
