apps/wiki/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: wiki-service
  namespace: prod

spec:
  selector:
    app: wiki
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
